--- a/style.css
+++ b/style.css
@@ -1,11 +1,24 @@
-body{
+body {
     background: #e7ecef;
+}
+
+#banner {
+    width: 100%;
+}
+
+h1 {
+    text-align: center;
 }
 
 p {
     text-align: center;
 }
 
-em strong{
+#missao {
+    font-size: 20px;
+
+} 
+
+em strong {
     color: #6096ba;
 }
