Adicionar listas e divisões de conteudo

--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 body {
-    background: #e7ecef;
+    
 }
 
 #banner {
     width: 100%;
+}
+
+.principal {
+    background: #e5e5e5;
+    padding: 30px;
 }
 
 h1 {
@@ -21,4 +26,29 @@ p {
 
 em strong {
     color: #6096ba;
+}
+
+.itens {
+    font-style: italic;
+}
+
+.beneficios {
+    background: #FFFFFF;
+    padding: 20px;
+}
+
+h2 {
+    text-align: center;
+}
+
+ul {
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 15%;
+}
+
+
+.imagembeneficios {
+    width: 50%;
 }
