--- a/style.css
+++ b/style.css
@@ -11,8 +11,12 @@ body {
     padding: 30px;
 }
 
-h1 {
+.titulo-centralizado {
     text-align: center;
+}
+
+.titulo-principal {
+    margin-left: 20px;
 }
 
 p {
@@ -35,10 +39,6 @@ em strong {
 .beneficios {
     background: #FFFFFF;
     padding: 20px;
-}
-
-h2 {
-    text-align: center;
 }
 
 ul {
