Adicionar os serviços ao projeto

--- a/products/css/produtos.css
+++ b/products/css/produtos.css
@@ -26,5 +26,35 @@ nav a {
     font-weight: bold;
     font-size: 22px;
     text-decoration: none;
+}
 
+.servicos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+
+.servicos li {
+    display: inline-block;
+    text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    box-sizing: border-box;
+}
+
+.servicos h2 {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.servico-descricao {
+    font-size: 18px;
+    padding: 30px 20px;
+}
+
+.servico-preco {
+    font-size: 22px;
+    font-weight: bold;
+    margin-top: 10px;
 }
