--- a/products/css/produtos.css
+++ b/products/css/produtos.css
@@ -40,7 +40,10 @@ nav a {
     width: 30%;
     vertical-align: top;
     margin: 0 1.5%;
+    padding: 30px 20px;
     box-sizing: border-box;
+    border: 2px solid #5c6b73;
+    border-radius: 30px;
 }
 
 .servicos h2 {
@@ -50,7 +53,6 @@ nav a {
 
 .servico-descricao {
     font-size: 18px;
-    padding: 30px 20px;
 }
 
 .servico-preco {
