Adicionar comportamentos a pagina

--- a/products/css/produtos.css
+++ b/products/css/produtos.css
@@ -28,6 +28,11 @@ nav a {
     text-decoration: none;
 }
 
+nav a:hover {
+    color: #ea8c55;
+    text-decoration: underline;
+}
+
 .servicos {
     width: 940px;
     margin: 0 auto;
@@ -43,7 +48,19 @@ nav a {
     padding: 30px 20px;
     box-sizing: border-box;
     border: 2px solid #5c6b73;
-    border-radius: 30px;
+    border-radius: 10px;
+}
+
+.servicos li:hover {
+    border-color: #ea8c55;
+}
+
+.servicos li:active {
+    border-color: #2a6f97;
+}
+
+.servicos li:hover h2 {
+    font-size: 34px;
 }
 
 .servicos h2 {
