--- a/products/css/style.css
+++ b/products/css/style.css
@@ -99,15 +99,52 @@ form {
     margin: 40px;
 }
 
-form label {
+form label, form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
 }
 
-form input {
+.input-padrao {
     display: block;
     margin: 0 0 20px;
     padding: 10px 25px;
     width: 50%;
+}
+
+.checkbox {
+    margin: 20px 0;
+}
+
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: orange;
+    color: white;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    transition: all 1s;
+    cursor: pointer;
+}
+
+.enviar:hover {
+    background: #ee6c4d;
+    transform: scale(1.2);
+}
+
+table {
+    margin: 20px 40px;
+}
+
+thead {
+    background: #c0c0c0;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 15px 8px;
 }
